Edit meal plan orders page.

--- a/src/web/templates/admin/meal-plans.html
+++ b/src/web/templates/admin/meal-plans.html
@@ -7,7 +7,7 @@
 
     <ol>
         <li ng-repeat="mealPlan in mealPlans">
-            ID: {{ mealPlan.id }}
+            ID: {{ mealPlan.humanId }}
             <br />
             Start date: {{ mealPlan.startDate | date:'d MMM yyyy HH:mm' }}
             <br />
