--- a/src/web/templates/customer/meal-plan/list.html
+++ b/src/web/templates/customer/meal-plan/list.html
@@ -15,13 +15,14 @@
 
             <span ng-if="mealPlan.statusText === 'pending_customer_approval'">
                 This meal plan is awaiting your approval.
+                <br />
+                <a ng-href="/customer/meal-plans/{{ mealPlan.id }}/review">View and approve meal plan</a>
             </span>
             <span ng-if="mealPlan.statusText === 'active'">
                 You have approved this meal plan and your orders have been sent to our vendors.
+                <br />
+                <a ng-href="/customer/meal-plans/{{ mealPlan.id }}/edit-orders">Edit your orders</a>
             </span>
-            <br />
-
-            <a ng-href="/customer/meal-plans/{{ mealPlan.id }}">View meal plan</a>
             <br />
 
             If you need to contact our support about this meal plan, please quote the reference "MP{{ mealPlan.humanId }}".
