--- a/src/web/templates/customer/meal-plan/success.html
+++ b/src/web/templates/customer/meal-plan/success.html
@@ -4,4 +4,9 @@
     <h2 class="cp-heading">
         You just ordered <em>{{ mealPlan.numberOfPlacedOrders }}</em> packages
     </h2>
+
+    <div ng-if="mealPlan && INCLUDE_ANALYTICS_JS">
+        <!-- Facebook Conversion Code for Leads Meal Deal -->
+        <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6030569955546&amp;cd[value]=0.00&amp;cd[currency]=GBP&amp;noscript=1" /></noscript>
+    </div>
 </div>
