--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -1,6 +1,12 @@
 <div class="wrapper">
     <h1>Vendor {{vendor.humanId}}: {{ vendor.name }}</h1>
 
+    <p>
+        <a ng-href="/vendor/{{ vendor.humanId }}">View in frontend</a>
+        <br />
+        <a ng-href="/admin/global-id-lookup/{{ vendor.id }}">View in global ID lookup</a>
+    </p>
+
     <h2>History</h2>
 
     <cp-history-table document-id="vendor.id" document-type="CityPantry\VendorBundle\Document\Vendor"></cp-history-table>
