--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -21,6 +21,13 @@
 
     <form role="form" ng-submit="save()">
         <div class="form-group">
+            <label for="cp-vendor-name">Name</label>
+            <input class="form-control input-lg" id="cp-vendor-name"
+                required
+                ng-model="vendor.name" />
+        </div>
+
+        <div class="form-group">
             <label for="description">Bio</label>
             <textarea class="form-control input-lg" id="description" required rows="6" aria-required="true" ng-model="vendor.description"></textarea>
         </div>
