--- a/src/web/scss/partials/_cp-meal-plan-review.scss
+++ b/src/web/scss/partials/_cp-meal-plan-review.scss
@@ -99,6 +99,7 @@
 .cp-meal-plan-review-order-package-info {
     float: left;
     padding: 14px 0;
+    max-width: 550px;
 
     .cp-meal-plan-review-order-package-name {
         @include cp-font-title(24px);
