Add total order amount to orders page.

--- a/src/web/templates/admin/orders.html
+++ b/src/web/templates/admin/orders.html
@@ -11,6 +11,8 @@
         <button ng-click="getOrderNumbers()" class="btn btn-primary">Get visible order numbers</button>
     </p>
 
+    <p>Total value of currently filtered orders: {{ ordersTotal | currency:'£':2 }}</p>
+
     <p ng-if="visibleOrderNumbers !== undefined">
         Visible order numbers:
         {{ visibleOrderNumbers.join(', ') }}
