Add customer meal plan status to staff "edit customer" page.

--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -27,6 +27,10 @@
 
     <p>User group: {{ customer.user.group.description }}</p>
 
+    <p>
+        Meal plan status: {{ customer.mealPlanStatus | getCustomerMealPlanStatusText }}.
+    </p>
+
     <section ng-if="customer.paidOnAccountStatus === 1">
         <h2>Pay on account details</h2>
 
