--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -29,6 +29,9 @@
 
     <p>
         Meal plan status: {{ customer.mealPlanStatus | getCustomerMealPlanStatusText }}.
+        <a ng-if="customer.mealPlanStatusText === 'none'"
+            ng-click="addToMealPlan()"
+            class="cp-add-to-meal-plan">Add to meal plan</a>
     </p>
 
     <section ng-if="customer.paidOnAccountStatus === 1">
