Add week seperator between meal plan orders.
Ticket: CPD-198.

--- a/src/web/scss/directives/cp-review-meal-plan.scss
+++ b/src/web/scss/directives/cp-review-meal-plan.scss
@@ -1,3 +1,12 @@
 cp-review-meal-plan {
     display: block;
 }
+
+li.cp-meal-plan-review-order {
+    &.cp-end-of-week {
+        border-bottom: none;
+    }
+    &.cp-start-of-week {
+        margin-top: 30px;
+    }
+}
