Display order payment method/term in staff pages.

--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -116,6 +116,13 @@
                     {{ order.isMealPlan ? 'Yes' : 'No' }}
                 </p>
             </div>
+
+            <div class="form-group">
+                <label>Payment method/term</label>
+                <p>
+                    {{ order.paymentTerm ? (order.paymentTerm | getPaymentTermText) : 'Unknown' }}
+                </p>
+            </div>
         </fieldset>
     </form>
 
