Show customer persona in staff pages.

--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -34,6 +34,8 @@
             class="cp-add-to-meal-plan">Add to meal plan</a>
     </p>
 
+    <p>Persona: {{ customer.persona | getCustomerPersonaText }}</p>
+
     <section ng-if="customer.paidOnAccountStatus === 1">
         <h2>Pay on account details</h2>
 
