Refresh CustomerAccountDetailsController if email changes.

--- a/src/web/templates/customer/account-details.html
+++ b/src/web/templates/customer/account-details.html
@@ -2,7 +2,7 @@
     <h2 class="cp-heading">Account details</h2>
 
     <div ng-show="!showEditDetailsForm">
-        <p>
+        <p class="account-details-summary">
             {{ authUser.customer.company }}<br />
             {{ authUser.user.name }}<br />
             {{ authUser.user.email }}
