--- a/src/web/templates/directives/cp-history-table.html
+++ b/src/web/templates/directives/cp-history-table.html
@@ -7,12 +7,15 @@
         <th>Date</th>
         <th>Event</th>
         <th>Details</th>
+        <th title="Only available since 18 June 2015">User</th>
     </thead>
     <tbody>
         <tr ng-repeat="event in history">
             <td>{{ event.date | date:'dd/MM/yyyy HH:mm' }}</td>
             <td>{{ event.title }}</td>
             <td>{{ event.info }}</td>
+            <td><a ng-if="event.user" ng-href="/admin/global-id-lookup/{{ event.user.id }}"
+                >{{ event.user.name }}</a></td>
         </tr>
     </tbody>
 </table>
