--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -10,6 +10,7 @@
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
         <li><a href="/admin/meal-plan">Meal plan</a></li>
+        <li><a href="/admin/reviews">Reviews</a></li>
         <li><a href="/admin/vendors/edit">Edit vendors</a></li>
         <li><a href="/admin/packages/edit">Edit packages</a></li>
         <li><a href="/admin/packages/delivery-radii">Edit delivery radii</a></li>
