--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -60,7 +60,7 @@
         <li ng-repeat="address in vendor.addresses">
             {{ address | addressSingleLineFormatter }}<br />
             Landline: {{ address.landlineNumber }}<br />
-            Order notification mobile: {{ address.orderNotificationMobileNumber }}
+            Order notification mobile(s): {{ address.orderNotificationMobileNumbers.join(', ') }}
         </li>
     </ul>
 
